# Foxtrot

./: .gitignore  Cargo.toml  README.md
migrations/: 20260709091325_create_users.sql
src/: db.rs  error.rs  main.rs  models.rs
src/handlers/: user_handlers.rs
src/repository/: user_repo.rs
src/service/: user_service.rs
